# aim

./: .gitattributes  .pipecolor.aim.toml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE.md  README.md
.cargo/: audit.toml
.github/: renovate.json
.github/workflows/: audit.yaml  cd.yaml  ci.yaml  pack.sh  rust.yaml
src/: address.rs  bar.rs  consts.rs  core.rs  driver.rs  error.rs  ftp.rs  hash.rs  http_serve_folder.rs  https.rs  io.rs  lib.rs  main.rs  netrc.rs  output.rs  question.rs  s3.rs  s3_new.rs  sftp.rs  slicer.rs  ssh.rs  ssh_auth.rs  tls.rs  untildify.rs
test/: common.sh  incomplete_debian_bullseye_ChageLog  incomplete_wpa_supplicant-2:2.9-8-x86_64.pkg.tar.zst  incomplete_wpa_supplicant-2XX2.9-8-x86_64.pkg.tar.zst
test/ftp/: Dockerfile  Justfile  binary_file.tar.gz.part2  vsftpd.sh
test/http_serve_folder/: Justfile
test/https/: Dockerfile  Justfile  nginx.conf
test/s3/: Dockerfile  Justfile  binary_file.tar.gz.part1
test/s3/.mc/: config.json
test/ssh/: Dockerfile  Justfile  docker-compose.yaml.with_keys  docker-compose.yaml.with_user_pass
test/ssh/keys/: id_ed25519  id_ed25519.pub
