[package]
name = "aim"
version = "1.8.5"
edition = "2021"
authors = ["Mihai Galos <mihai@galos.one>"]
description = "🎯 A command line download/upload tool with resume."
categories = [
    "HTTP client",
    "command-line-utilities",
    "network-programming",
    "web-programming::http-client"
]

keywords = [
    "cli",
    "download",
    "resume",
    "upload"
]

repository = "https://github.com/mihaigalos/aim"
license = "MIT"

[dependencies]
async-ssh2-lite = { version = "0.4.7", features = ["tokio"] }
async-std = "1.12.0"
async-stream = "0.3.5"
async_ftp = "6.0.0"
autoclap = "0.3.15"
clap = { version = "4.4.6", features = ["cargo", "string"] }
crossbeam-utils = "0.8.16"
custom_error = "1.9.2"
dotenvy = "0.15.7"
futures = "0.3"
futures-util = "0.3.28"
http = "0.2.9"
indicatif = "0.17.7"
lazy_static = "1.4.0"
log = "0.4.20"
melt = "0.1.6"
native-tls = "0.2"
netrc = "0.4.1"
openssl = { version = "0.10.57", features = ["vendored"] }
question = "0.2.2"
regex = "1.9.6"
reqwest = { version = "0.11.20", features = ["stream"] }
rust-s3 = { version = "0.33.0", features = ["blocking", "with-tokio"] }
self_update = { version = "0.38.0", features = ["archive-tar", "compression-flate2"] }
sha2 = "0.10.8"
skim-navi = "0.1.10"
ssh2 = "0.9.4"
strfmt = "0.2.4"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = {version="0.7.9", features = ["full"]}
untildify = "0.1.1"
url-parse = "1.0.7"
uuid = { version = "1.4", features = ["v4"] }
warpy = "0.3.32"

[dev-dependencies]
serial_test = "2.0.0"
